--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "1.0.0",
     "description": "small project to demonstrate api and ui testing abilities",
     "scripts": {
-        "test": "mocha -r ts-node/register test/**/*.test.ts --timeout 10000"
+        "test": "mocha -r ts-node/register test/**/*.test.ts --reporter mochawesome --timeout 10000"
     },
     "devDependencies": {
         "@types/chai": "^4.1.7",
@@ -12,7 +12,7 @@
         "chai": "^4.2.0",
         "chai-as-promised": "^7.1.1",
         "mocha": "^8.2.1",
-        "mochawesome": "6.1.1",
+        "mochawesome": "^6.1.1",
         "mochawesome-merge": "4.2.0",
         "mochawesome-report-generator": "5.1.0",
         "playwright": "^1.6.2",
